--- a/Greeting/Greeting.csproj
+++ b/Greeting/Greeting.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{250F896F-98EE-4204-A87D-32C82D5E5559}</ProjectGuid>
+    <ProjectGuid>{0E1C4D61-1009-44A4-A614-6D501D1DE341}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Meow</RootNamespace>
-    <AssemblyName>Meow</AssemblyName>
+    <RootNamespace>Greeting</RootNamespace>
+    <AssemblyName>Greeting</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,10 +40,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Meow.cs" />
+    <Compile Include="Greeting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Artist Manager Bot\Artist Manager Bot.csproj">
+      <Project>{B0B1F8CC-822E-43F1-802A-AC113CC51D67}</Project>
+      <Name>Artist Manager Bot</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\BaseForBotExtension\BaseForBotExtension.csproj">
       <Project>{9FB7FF58-A95D-44F1-8A46-C43BA4812BB3}</Project>
       <Name>BaseForBotExtension</Name>
@@ -52,9 +56,6 @@
       <Project>{C243E36A-DA44-4148-8299-E557BD2F07C7}</Project>
       <Name>VKInteraction</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
