--- a/TurnOff/TurnOff.csproj
+++ b/TurnOff/TurnOff.csproj
@@ -53,5 +53,8 @@
       <Name>VKInteraction</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
