--- a/VKInteraction/packages.config
+++ b/VKInteraction/packages.config
@@ -2,4 +2,11 @@
 <packages>
   <package id="Citrina" version="2.5.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
+  <package id="protobuf-net" version="2.2.1" targetFramework="net452" />
+  <package id="ServiceStack" version="4.5.12" targetFramework="net452" />
+  <package id="ServiceStack.Client" version="4.5.12" targetFramework="net452" />
+  <package id="ServiceStack.Common" version="4.5.12" targetFramework="net452" />
+  <package id="ServiceStack.Interfaces" version="4.5.12" targetFramework="net452" />
+  <package id="ServiceStack.ProtoBuf" version="4.5.12" targetFramework="net452" />
+  <package id="ServiceStack.Text" version="4.5.12" targetFramework="net452" />
 </packages>
