--- a/BaseForBotExtension/BaseForBotExtension.csproj
+++ b/BaseForBotExtension/BaseForBotExtension.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{FE672DC7-32FD-479B-A860-3396DD5E1064}</ProjectGuid>
+    <ProjectGuid>{9FB7FF58-A95D-44F1-8A46-C43BA4812BB3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TurnOff</RootNamespace>
-    <AssemblyName>TurnOff</AssemblyName>
+    <RootNamespace>BaseForBotExtension</RootNamespace>
+    <AssemblyName>BaseForBotExtension</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,14 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TurnOff.cs" />
+    <Compile Include="BotExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SendMessageEventArgs.cs" />
+    <Compile Include="UsersGridUpdateEventArgs.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\BaseForBotExtension\BaseForBotExtension.csproj">
-      <Project>{9fb7ff58-a95d-44f1-8a46-c43ba4812bb3}</Project>
-      <Name>BaseForBotExtension</Name>
-    </ProjectReference>
     <ProjectReference Include="..\VKInteraction\VKInteraction.csproj">
       <Project>{C243E36A-DA44-4148-8299-E557BD2F07C7}</Project>
       <Name>VKInteraction</Name>
