--- a/Greeting/Greeting.csproj
+++ b/Greeting/Greeting.csproj
@@ -48,8 +48,8 @@
       <Project>{B0B1F8CC-822E-43F1-802A-AC113CC51D67}</Project>
       <Name>Artist Manager Bot</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\BaseForBotExtension\BaseForBotExtension.csproj">
-      <Project>{9FB7FF58-A95D-44F1-8A46-C43BA4812BB3}</Project>
+    <ProjectReference Include="..\BaseForBotExtension\BaseForBotExtension.csproj">
+      <Project>{9fb7ff58-a95d-44f1-8a46-c43ba4812bb3}</Project>
       <Name>BaseForBotExtension</Name>
     </ProjectReference>
     <ProjectReference Include="..\VKInteraction\VKInteraction.csproj">
