--- a/KickToDraw/KickToDraw.csproj
+++ b/KickToDraw/KickToDraw.csproj
@@ -45,8 +45,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\BaseForBotExtension\BaseForBotExtension.csproj">
-      <Project>{9FB7FF58-A95D-44F1-8A46-C43BA4812BB3}</Project>
+    <ProjectReference Include="..\BaseForBotExtension\BaseForBotExtension.csproj">
+      <Project>{9fb7ff58-a95d-44f1-8a46-c43ba4812bb3}</Project>
       <Name>BaseForBotExtension</Name>
     </ProjectReference>
     <ProjectReference Include="..\VKInteraction\VKInteraction.csproj">
