--- a/Links/Links.csproj
+++ b/Links/Links.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{FE672DC7-32FD-479B-A860-3396DD5E1064}</ProjectGuid>
+    <ProjectGuid>{CACF7417-A64F-443B-A127-DA34056D3D37}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TurnOff</RootNamespace>
-    <AssemblyName>TurnOff</AssemblyName>
+    <RootNamespace>Links</RootNamespace>
+    <AssemblyName>Links</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TurnOff.cs" />
+    <Compile Include="Links.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -48,7 +48,7 @@
       <Project>{9fb7ff58-a95d-44f1-8a46-c43ba4812bb3}</Project>
       <Name>BaseForBotExtension</Name>
     </ProjectReference>
-    <ProjectReference Include="..\VKInteraction\VKInteraction.csproj">
+    <ProjectReference Include="..\..\TestVKAPINuGet\VKInteraction\VKInteraction.csproj">
       <Project>{C243E36A-DA44-4148-8299-E557BD2F07C7}</Project>
       <Name>VKInteraction</Name>
     </ProjectReference>
