--- a/VKInteraction/VKInteraction.csproj
+++ b/VKInteraction/VKInteraction.csproj
@@ -74,6 +74,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Message.cs" />
+    <Compile Include="MessageDirection.cs" />
     <Compile Include="Vk.cs" />
     <Compile Include="MessageReceivedEvestArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
