--- a/Learning/Learning.csproj
+++ b/Learning/Learning.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{66EE1FA3-FF21-4872-9005-4B61CFE845E0}</ProjectGuid>
+    <ProjectGuid>{4FD9925B-F0CE-4E4A-8236-817FAFDA4627}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>KickToDraw</RootNamespace>
-    <AssemblyName>KickToDraw</AssemblyName>
+    <RootNamespace>Learning</RootNamespace>
+    <AssemblyName>Learning</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -42,18 +42,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="KickToDraw.cs" />
+    <Compile Include="Learning.cs" />
+    <Compile Include="LearningForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LearningForm.Designer.cs">
+      <DependentUpon>LearningForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BaseForBotExtension\BaseForBotExtension.csproj">
-      <Project>{9fb7ff58-a95d-44f1-8a46-c43ba4812bb3}</Project>
+      <Project>{9FB7FF58-A95D-44F1-8A46-C43BA4812BB3}</Project>
       <Name>BaseForBotExtension</Name>
     </ProjectReference>
     <ProjectReference Include="..\VKInteraction\VKInteraction.csproj">
       <Project>{C243E36A-DA44-4148-8299-E557BD2F07C7}</Project>
       <Name>VKInteraction</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="LearningForm.resx">
+      <DependentUpon>LearningForm.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
